--- a/client/assets/styles/base.css
+++ b/client/assets/styles/base.css
@@ -1,41 +1,38 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap');
+
+:root {
+  font-family: 'DM-sans', sans-serif;
+}
 
 * {
   box-sizing: border-box;
+  outline: none;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100vh;
   margin: 0;
+}
+
+body {
+  background-color: #181a20;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
   padding: 0;
   outline: none;
 }
 
-button {
-  cursor: pointer;
-  border: none;
+img {
+  width: 100%;
+  height: 100%;
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
-}
 
-h1 {
-  font-size: 28px;
-}
-
-h2 {
-  font-size: 24px;
-}
-
-h3 {
-  font-size: 20px;
-}
-
-h4 {
-  font-size: 16px;
-}
-
-h5 {
-  font-size: 14px;
-}
-
-h6 {
-  font-size: 12px;
-}
