--- a/client/assets/styles/base.scss
+++ b/client/assets/styles/base.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap');
-@import "./font-awesome.min";
+@import "./font-awesome-4.7.0/css/font-awesome.min.css";
 
 :root {
   font-family: 'DM-sans', sans-serif;
