--- a/client/assets/styles/base.scss
+++ b/client/assets/styles/base.scss
@@ -27,6 +27,7 @@ body {
 
 body {
   background-color: #181a20;
+  color: var(--font-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
