--- a/client/assets/styles/base.scss
+++ b/client/assets/styles/base.scss
@@ -2,14 +2,15 @@
 @import "./font-awesome-4.7.0/css/font-awesome.min.css";
 
 :root {
-  --main-color: #1f2128;
-  --font-color: #fff;
-  --secondary-font-color: #59657c;
-  --purple: #6343e4; // b8235a
+  --dark-color: #1f2128;
+  --dark-color-medium: #323542;
+  --dark-color-light: #59657c;
+  --second-color: #0064b4; // b8235a
   --secong: #b8235a;
-  --player-color: #323542;
+  --font-color: #fff;
 
   --player-mini-height: 76px;
+  --player-menu-height: 50px;
 }
 
 * {
@@ -25,17 +26,14 @@ body {
 }
 
 html {
-  height: -webkit-fill-available;
   font-family: 'DM-sans', sans-serif;
 }
 
 body {
-  background-color: #181a20;
+  background-color: var(--dark-color);
   color: var(--font-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
 }
 
 button {
