--- a/src/assets/styles/keyframes.scss
+++ b/src/assets/styles/keyframes.scss
@@ -23,3 +23,13 @@
     transform: scale(1);
   }
 }
+
+@keyframes track-icon-rotating {
+  0% {
+    transform: rotateZ(0deg);
+  }
+
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
